# somnus_lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
src/smns/: Helpers.hpp  algorithm.hpp  bigInt.hpp  concepts.hpp  string.cpp  string.h  study.hpp
src/smns/math/: analytics.h  constants.hpp  vec2.h
src/smns/types/: average.hpp  bigInt.hpp  string.cpp
